# perplex-aspect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md
cookbooks/: adiabatic_decompression.prm  box_2pp.prm  box_batch.prm  closed_box_fields.prm  closed_box_particles.prm  decompression_2pp.prm  decompression_batch.prm  decompression_fields.prm  decompression_frac.prm  decompression_particles.prm  frac_melt.prm  frac_melt_holland_et_al.prm  frac_melt_simple.prm  melt_simple.prm  melt_simple_fast.prm  perplex_melt.prm  perplex_melt_global.prm  perplex_melt_simple.prm  perplex_melt_simple_fast.prm  perplex_particle.prm  phase_composition.prm  simple_phase_composition.prm
cookbooks/archive/: perplex_melt_global.prm  phase_composition.prm
data/: perplex-lookup.prm
data/aspect/: particle_global_no_melt.prm
data/aspect-prm-files/: particle_global_no_melt.prm  perplex-lookup.prm
data/example_connolly_epsl_2018/: aqk30.ps  aqsio2.ps  gloss1d1_1.tab  gloss1d1_2.tab  gloss1d1_WERAMI_dialog.txt  gloss1d5_1.tab  gloss1d5_2.tab  gloss1d5_3.tab  gloss1d5_WERAMI_dialog.txt  gloss1d6_1.tab  gloss1d6_2.tab  gloss1d6_WERAMI_dialog.txt  gloss1d_1.tab  gloss1d_2.tab  gloss1d_WERAMI_dialog.txt  gloss1db_1.tab  gloss1db_2.tab  gloss1db_WERAMI_dialog.txt  gloss1di_1.tab  gloss1di_2.tab  gloss1di_3.tab  gloss1di_WERAMI_dialog.txt  gloss1di_seismic_data.txt
data/parameter-files/: .perplex-lookup.prm.swo  perplex-lookup.prm
data/perplex-dat-files/holland-et-al-2018.KLB-1/: khgp_seismic_data.txt
data/perplex-dat-files/test1/: README.md
data/perplex/holland-et-al-2018/klb-1/: README.md
data/perplex/holland-et-al-2018/klb-1-fast/: README.md
data/perplex/tests/: test1_seismic_data.txt
include/meemum/: wrapper.h  wrapper.hpp
include/perplex/: solver.h
include/perplexaspect/: perplex_melt_global.h  perplex_melt_simple.h  utilities.h
include/perplexaspect/initial_composition/: perplex_composition.h
include/perplexaspect/material_model/: perplex_melt.h  perplex_melt_simple.h
include/perplexaspect/particle/property/: perplex_composition.h
include/perplexaspect/postprocess/: perplex_cache_statistics.h
perplex/: CMakeLists.txt
perplex/include/perplex/: main.h  meemum_solver.h  solver.h  state.h  utils.h
perplex/src/: CMakeLists.txt  c_interface.f  c_interface.h  interface.h  interface.test.cc  main.cc  meemum_solver.cc  solver.cc  solver.test.cc  state.cc  utils.cc  utils.h
perplex/test/: CMakeLists.txt  c_interface.cc  meemum_solver.cc  solver.cc  state.cc
phaseinfo/: CMakeLists.txt
phaseinfo/data/test/simple/: test.prm
phaseinfo/src/: CMakeLists.txt  phase_composition.cc
phaseinfo/src/material_model/: material_model.cc  material_model.h
scripts/: build_header.py  f2c_parameters.py
source/: CMakeLists.txt  composition.cc  perplex_melt_global.cc  perplex_melt_simple.cc  perplex_particle.cc  utilities.cc
source/initial_composition/: perplex_composition.cc
source/material_model/: perplex_melt.cc  perplex_melt_simple.cc
source/particle/property/: perplex_composition.cc
source/postprocess/: perplex_cache_statistics.cc
src/: CMakeLists.txt  Makefile  composition.cc  decompr_melt.cc  decompr_melt.cpp  libmeemum.f  meemum_wrapper.cc  meemum_wrapper.f  meemum_wrapper.h  meemum_wrapper.hpp  misc.cpp  plugin.cc  test.cpp  wrapper.cc
src/aspect/: CMakeLists.txt
src/aspect/particle/property/: phase_composition.cc
src/meemum/: CMakeLists.txt  calcs.f  calcs.hpp  ftoc.f  ftoc.h  ftoc.test.cc  interface.f  interface.hpp  meemum.f  meemum.h  props.f  props.h  props.hpp  wrapper.cc  wrapper.cpp  wrapper.hpp  wrapper.test.cc  wrapper.test.cpp
src/perplex/: CMakeLists.txt  interface.f  interface.h  interface.test.cc  solver.cc  solver.test.cc
src/plugin/: CMakeLists.txt  material_model.cc  material_model.h
tests/: CMakeLists.txt  perplex_fields.prm  perplex_particle.prm  perplex_particles.prm
tests/khgp/: khgp.cpp
tests/meemum/: wrapper.test.cpp
tests/perplex_fields/: log.txt  statistics
tests/perplex_fields/solution/: solution-00000.0000.gnuplot  solution-00001.0000.gnuplot
tests/perplex_particle/: log.txt  particles-00000.0000.gnuplot  particles-00001.0000.gnuplot  statistics
tests/perplex_particles/: log.txt  statistics
tests/perplex_particles/particles/: particles-00000.0000.gnuplot  particles-00001.0000.gnuplot
tests/perplex_particles/solution/: solution-00000.0000.gnuplot  solution-00001.0000.gnuplot
tools/: f2c.py  mpi-slurm.sh
tools/f2c/: __main__.py  compiler.py  new.py
